[Wayland] Resize loop with select element bigger than the screen.
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox100 | --- | unaffected |
firefox101 | --- | verified |
firefox102 | --- | verified |
People
(Reporter: emilio, Assigned: emilio)
References
(Depends on 1 open bug, Blocks 2 open bugs, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
1.03 MB,
video/webm
|
Details |
STR:
- Open bug 1770132's test-case.
- Hover over the select menu when open.
ER:
- Stable layout
AR: Flickering.
Assignee | ||
Comment 1•8 months ago
|
||
Constraining only the pref size is almost fine. We also need to
constrain the anchor size when we're sized to the popup.
Assignee | ||
Comment 2•8 months ago
|
||
Comment on attachment 9277296 [details]
Bug 1770151 - Constrain size for Wayland on SetPopupPosition if needed. r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: Flickering on some linux configurations.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Wayland-specific, truncates in two places instead of one, only when the popup is too big.
- String changes made/needed: none
- Is Android affected?: No
Assignee | ||
Updated•8 months ago
|
Updated•8 months ago
|
Comment 3•8 months ago
|
||
Set release status flags based on info from the regressing bug 1765714
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9e7c26a560dc Constrain size for Wayland on SetPopupPosition if needed. r=stransky
Comment 5•8 months ago
|
||
bugherder |
Updated•8 months ago
|
Updated•8 months ago
|
Comment 6•8 months ago
|
||
Comment on attachment 9277296 [details]
Bug 1770151 - Constrain size for Wayland on SetPopupPosition if needed. r=stransky
Approved for 101.0rc1.
Comment 7•8 months ago
|
||
bugherderuplift |
Comment 8•8 months ago
|
||
Hello,
Unfortunately we could not find any flickering on the testcase.
We have tested the scenario on Ubuntu 20 with Wayland, on all themes and combinations (Light, Standard, Dark with and without High Contrast).
Could you please help us with more information about the configuration about the environment?
Please observe the attached video.
Comment 9•8 months ago
|
||
Comment 10•8 months ago
•
|
||
You need to open Firefox with Wayland backend (MOZ_ENABLE_WAYLAND=1).
The first button is a dropdown, you need to open it. The dropdown was the thing that flickered.
It doesn't flicker anymore for me.
The dropdown stretches across the whole screen in Nightly, but only across the window in Chromium. Is that expected?
Assignee | ||
Comment 11•8 months ago
|
||
Yes.
Updated•8 months ago
|
Comment 12•8 months ago
|
||
Verified on Nightly 102 from 23 May 2022 and on 101.0 Firefox.
Updated•8 months ago
|
Description
•