Bug 1770151 - Constrain size for Wayland on SetPopupPosition if needed. r=stransky

Constraining only the pref size is almost fine. We also need to
constrain the anchor size when we're sized to the popup.

Differential Revision: https://phabricator.services.mozilla.com/D146809