layout/xul/nsMenuPopupFrame.h
@@ -179,7 +179,7 @@ class nsMenuPopupFrame final : public nsBoxFrame,
   void LockMenuUntilClosed(bool aLock) override;
   bool IsMenuLocked() override { return mIsMenuLocked; }
 
-  nsIWidget* GetWidget();
+  nsIWidget* GetWidget() const;
 
   // Overridden methods
   virtual void Init(nsIContent* aContent, nsContainerFrame* aParent,
@@ -416,6 +416,8 @@ class nsMenuPopupFrame final : public nsBoxFrame,
  protected:
   // returns the popup's level.
   nsPopupLevel PopupLevel(bool aIsNoAutoHide) const;
+
+  void ConstrainSizeForWayland(nsSize&) const;
 
   // redefine to tell the box system not to move the views.
   ReflowChildFlags GetXULLayoutFlags() override;
